--- a/node/node-project/package.json
+++ b/node/node-project/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app_method.js",
+    "dev": "nodemon app_mysql.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
